Bug fix for grid to help prevent H margins when they're the first of a .span

--- a/libs/base/simplegrid.less
+++ b/libs/base/simplegrid.less
@@ -51,6 +51,14 @@
     & .row:last-child *[class*="span"]:last-child {
         margin-bottom: 0;
     }
+    & > h1:first-of-type,
+    & > h2:first-of-type,
+    & > h3:first-of-type,
+    & > h4:first-of-type,
+    & > h5:first-of-type,
+    & > h6:first-of-type {
+        margin-top: 0;
+    }
 }
 
 // Create loop that iterate through the columns
