Quick fixes to IE styles

--- a/libs/site.less
+++ b/libs/site.less
@@ -11,7 +11,6 @@
 @import "base/global";
 @import "base/tables";
 @import "base/buttons";
-@import "base/ie";
 @import "base/forms";
 @import "base/framework";
 @import "base/icons";
@@ -84,6 +83,9 @@
 @import "modules/share-bar";
 @import "modules/overlay";
 @import "modules/adviser";
+
+/* IE styles */
+@import "base/ie";
 
 /* Print styles */
 @media print {
