Fixed silly mistake in ie.less

--- a/libs/base/ie.less
+++ b/libs/base/ie.less
@@ -1,10 +1,10 @@
-.ie8 input[type=password] {
-    // Fix a strange bug in IE8 where the * come out as boxes with a custom font
-    font-family: sans-serif;
-
+.ie8 {
+	input[type=password] {
+	    // Fix a strange bug in IE8 where the * come out as boxes with a custom font
+	    font-family: sans-serif;
+	}
     // Stops the whole page getting really weird
     min-width: 800px;
-    
 	.mega-menu {
 	    border: 1px solid  @blue-navigation;
 	    border-top: 6px solid @blue-navigation;
