--- a/libs/base/ie.less
+++ b/libs/base/ie.less
@@ -1,19 +1,20 @@
 .ie8 {
+    min-width: 800px; // Stops the whole page getting really weird
+
 	input[type=password] {
 	    // Fix a strange bug in IE8 where the * come out as boxes with a custom font
 	    font-family: sans-serif;
 	}
-    // Stops the whole page getting really weird
-    min-width: 800px;
+    
 	.mega-menu {
 	    border: 1px solid  @blue-navigation;
 	    border-top: 6px solid @blue-navigation;
 	}
 
-	.btn {
+	/*.btn {
 		line-height: 2.5 !important;
 		&:after {
 			top: 12.5% !important;
 		}
-	}
+	}*/
 }
