Added navigation page mockup

--- a/libs/jade/navigation-page.jade
+++ b/libs/jade/navigation-page.jade
@@ -23,9 +23,9 @@ block content
 				input#standardField(placeholder="Search", type="text", value="Consumer")
 				b Related tags:&nbsp;
 				button.btn.btn-small(type="button") Tag one
-				button.btn.btn-small(type="button") Tag one
-				button.btn.btn-small(type="button") Tag one
-				button.btn.btn-small(type="button") Tag one
+				button.btn.btn-small(type="button") Tag two
+				button.btn.btn-small(type="button") Tag three
+				button.btn.btn-small(type="button") Tag four3
 		//.row
 			.span12
 				hr(style="margin:0;")
