Added more rem fallbacks

--- a/libs/base/lists.less
+++ b/libs/base/lists.less
@@ -96,6 +96,7 @@ li > ol {
         margin-bottom: 0;
 
         a {
+            padding: 1em 1em*.6;
             padding: @box-spacing @box-spacing*.6;
             display: inline-block;
             text-align: center;
@@ -118,7 +119,9 @@ li > ol {
 .search-tab-container{
     background: @gray-7;
     overflow: hidden;
+    margin-top: 1em*.6;
     margin-top: @box-spacing*.6;
+    border-bottom: 1em*.6 solid @heritage-blue;
     border-bottom: @box-spacing*.6 solid @heritage-blue;
     ul {
         list-style: none;
@@ -134,6 +137,7 @@ li > ol {
         vertical-align: top;
 
         a {
+            padding: 1em 1em*.6;
             padding: @box-spacing @box-spacing*.6;
             display: inline-block;
             text-align: center;
@@ -155,7 +159,9 @@ li > ol {
 .letters-tab-container {
     background: @gray-7;
     overflow: hidden;
+    margin-top: 1em*.6;
     margin-top: @box-spacing*.6;
+    border-bottom: 1em*.6 solid @heritage-blue;
     border-bottom: @box-spacing*.6 solid @heritage-blue;
     clear: both;
     ul {
@@ -167,6 +173,7 @@ li > ol {
         width: 25%;
         margin-bottom: 0;
         a {
+            padding: 1em 1em*.6;
             padding: @box-spacing @box-spacing*.6;
             display: inline-block;
             text-align: center;
@@ -216,6 +223,7 @@ li > ol {
 
 // Pagination
 .pagination ul {
+    margin: 1em 0;
     margin: @box-spacing 0;
     padding: 0;
     overflow: hidden;
