--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -26,6 +26,7 @@ body{
 
 .print-only.logo {
 	display: block;
+	margin-bottom: 1em;
 	margin-bottom: @box-spacing;
 }
 
@@ -91,7 +92,9 @@ aside,
 .callout--generous,
 .callout--white {
 	border: 1px solid @gray-5;
+	padding: 1em;
 	padding: @box-spacing;
+	margin: 1em 0;
 	margin: @box-spacing 0;
 	//page-break-inside: avoid;
 }
