--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -1,94 +1,5 @@
-
 // Basic button styling
 // To style a link to look like a button use .button
-
-/*
-.btn,
-.button,
-button,
-input[type=submit],
-input[type=reset],
-input[type=button] {
-    cursor: pointer;
-    border-radius: @form-border-radius;
-    background-color: @aqua-light;
-    border: none;
-    color: @heritage-blue;
-    padding: @box-spacing-vertical @box-spacing-horizontal;
-    font-weight: bold;
-    margin: @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 0;
-    &:hover,
-    &:focus,
-    &:active {
-        background-color: darken(@aqua, 5%);
-        outline: 0;
-    }
-    &:focus {
-        -webkit-box-shadow: 0px 0px 0px 2px @heritage-yellow;
-        -moz-box-shadow: 0px 0px 0px 2px @heritage-yellow;
-        box-shadow: 0px 0px 0px 2px @heritage-yellow;
-    }
-}
-
-
-.btn-primary,
-.button--blue {
-    color: @heritage-blue;
-    background-color: @aqua;
-    &:hover, &:active, &:focus  {
-        background-color: darken(@aqua, 10%);
-    }
-}
-
-.btn-primary-light {
-    color: @heritage-blue;
-    background-color: @aqua-light;
-    &:hover, &:active, &:focus  {
-        background-color: @aqua;
-    }
-}
-
-.btn-secondary {
-    color: @white;
-    background-color: @heritage-blue; 
-    &:hover, &:active, &:focus  {
-        background-color: darken(@heritage-blue, 5%);
-    }
-}
-
-.btn-right {
-    float: right;
-    margin: @box-spacing-horizontal*.5 0 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5;    
-}
-
-.btn-disabled,
-.button--grey {
-    color: @gray-3;
-    background-color: @gray-6;
-    cursor: not-allowed;
-    &:hover, &:active, &:focus  {
-        background-color: @gray-6;             
-    }
-}
-
-.btn-warning {
-    color: @white;
-    background-color: @red; 
-    &:hover, &:active, &:focus  {
-        background-color: darken(@red, 10%);             
-    }
-}
-
-.btn-success,
-.button--green {
-    color: @white;
-    background-color: @green;
-    &:hover, &:active, &:focus  {
-        background-color: @green-dark;  
-        color: @white;           
-    }
-} 
-*/
 
 .btn,
 .button,
@@ -118,7 +29,8 @@ input[type=button] {
 
 .btn-right {
     float: right;
-    margin: @box-spacing-horizontal*.5 0 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5;    
+    margin: .75em*.5 0 .75em*.5 1em*.5;
+    margin: @box-spacing-vertical*.5 0 @box-spacing-vertical*.5 @box-spacing-horizontal*.5;    
 }
 
 .btn-disabled,
@@ -237,7 +149,8 @@ button:disabled {
 .btn-group {
     display: inline-table;
     white-space: nowrap;
-    margin: @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 0;
+    margin: .75em*.5 1em*.5 .75em*.5 0;
+    margin: @box-spacing-vertical*.5 @box-spacing-horizontal*.5 @box-spacing-vertical*.5 0;
     .btn {
         border-radius: 0;
         margin: 0;
