Created spacing mixin to handle paddings and margins with fallback

--- a/libs/site.less
+++ b/libs/site.less
@@ -30,6 +30,7 @@
 @import "mixins/popup";
 @import "mixins/vertical-align";
 @import "mixins/btn-icon";
+@import "mixins/spacing";
 
 /* Module files */
 @import "modules/extent-switcher-modal";
