--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -15,13 +15,13 @@
 form {
     .invalid {
         color: @red;
-        padding-top: 1em/4;
+        padding-top: unit(@box-spacing/4,em);
         padding-top: @box-spacing/4;
         clear: both;
     }
     .valid {
         color: @green;
-        padding-top: 1em/4;
+        padding-top: unit(@box-spacing/4,em);
         padding-top: @box-spacing/4;
         clear: both;
     }
@@ -35,7 +35,7 @@ fieldset,
     padding: 0;
     margin: 0;
     border: 0;
-    margin-bottom: 1em;
+    margin-bottom: unit(@box-spacing,em);
     margin-bottom: @box-spacing;
 }
 
@@ -48,7 +48,7 @@ label,
     display: block;
     max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
     //margin-bottom: 5px;
-    margin-bottom: 1em*.5;
+    margin-bottom: unit(@box-spacing*.5,em);
     margin-bottom: @box-spacing*.5;
     font-weight: @font-weight-bolder;
     .form__label--inline {
@@ -58,7 +58,7 @@ label,
 .radio, .checkbox, .radio--inline, .checkbox--inline { 
     font-weight: @font-weight-bold;
     input {
-        margin-right: 1em/2;
+        margin-right: unit(@box-spacing/2,em);
         margin-right: @box-spacing/2;
     }
 }
@@ -70,9 +70,9 @@ label,
 span.form-hint {
     display: block;
     color: @gray-3;
-    margin-bottom: 1em*.5;
+    margin-bottom: unit(@box-spacing*.5,em);
     margin-bottom: @box-spacing*.5;
-    margin-top: -1em*.5;
+    margin-top: unit(-@box-spacing*.5,em);
     margin-top: -@box-spacing*.5;
     font-weight: @font-weight-base;
 }
@@ -83,8 +83,7 @@ input[type=password],
 input[type=email],
 input[type=number],
 input[type=search] {
-    padding: .75em 1em;
-    padding: @box-spacing-vertical @box-spacing-horizontal;
+    .spacing(padding,@box-spacing-vertical,@box-spacing-horizontal);
     -webkit-appearance: none;
     width: 100%;
     border-radius: 0;
@@ -148,7 +147,7 @@ select {
 }
 
 textarea {
-    height: 1em*8;
+    height: unit(@box-spacing*8,em);
     height: @box-spacing*8;
     resize: vertical;
 }
@@ -161,8 +160,7 @@ input[class*="dob-"],
 textarea,
 select {
     width: 100%;
-    padding: .75em 1em;
-    padding: @box-spacing-vertical @box-spacing-horizontal;
+    .spacing(padding,@box-spacing-vertical,@box-spacing-horizontal);
     border-radius: @form-border-radius;
     &:focus:required:invalid {
 //      border-color: @red;
@@ -241,13 +239,12 @@ input[type="file"]::before {
 
 .radio,
 .checkbox {
-    padding: .75em 1em;
-    padding: @box-spacing-vertical @box-spacing-horizontal;
+    .spacing(padding,@box-spacing-vertical,@box-spacing-horizontal);
     cursor: pointer;
     border-radius: @form-border-radius;
     position: relative;
     display: block;
-    margin-right: @box-spacing-horizontal/2;
+    margin-right: unit(@box-spacing-horizontal/2,em);
     margin-right: @box-spacing-horizontal/2;
     z-index: 1;
     input {
@@ -310,16 +307,14 @@ input[type="file"]::before {
 
 .multi-select {
     padding: 0;
-    height: 1em*5.5 !important;
+    height: unit(@box-spacing*5.5,em) !important;
     height: @box-spacing*5.5 !important;
     option {
-        padding: .75em/2 1em/2;
-        padding: @box-spacing-vertical/2 @box-spacing-horizontal/2;
+        .spacing(padding,@box-spacing-vertical/2,@box-spacing-horizontal/2);
         -webkit-appearance: none;
     }
     @media only screen and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
-        padding: .75em 1em;
-        padding: @box-spacing-vertical @box-spacing-horizontal;
+        .spacing(padding,@box-spacing-vertical,@box-spacing-horizontal);
         height: auto !important;
     }
 }
@@ -356,7 +351,7 @@ input[class*="dob-"] {
     width: 5rem;
     display: inline-block;
     float: left;
-    margin-right: 1em/2;
+    margin-right: unit(@box-spacing-horizontal/2,em);
     margin-right: @box-spacing-horizontal/2;
     &:last-child {
         margin: 0;
@@ -393,8 +388,7 @@ input[class*="dob-"] {
         }
         button {
             //width: 25%;
-            padding: .75em 1em;
-            padding: @box-spacing-vertical @box-spacing-horizontal;
+            .spacing(padding,@box-spacing-vertical,@box-spacing-horizontal);
         }
         input:first-of-type {
             border-radius: @form-border-radius 0 0 @form-border-radius;
@@ -422,8 +416,7 @@ input[class*="dob-"] {
         }
         label {
             //width: 25%;
-            padding: .75em 1em;
-            padding: @box-spacing-vertical @box-spacing-horizontal;
+            .spacing(padding,@box-spacing-vertical,@box-spacing-horizontal);
             text-align: center;
             input {
                 margin-right: .25em;
@@ -439,8 +432,7 @@ input[class*="dob-"] {
         }
         button {
             width: 25%;
-            padding: .75em 0;
-            padding: @box-spacing-vertical 0;
+            .spacing(padding,@box-spacing-vertical,0);
         }
         input:first-of-type {
             border-radius: @form-border-radius 0 0 @form-border-radius;
@@ -866,7 +858,8 @@ input[class*="dob-"] {
         -moz-appearance: none;
         border: 0; //If you want a border set it on the parent
         background: transparent;
-        padding: .75em;
+        padding: unit(@box-spacing-vertical,em);
+        padding: @box-spacing-vertical;
 
         // We need to push the pointer off the side so it is hidden in the overflow
         // In webkit / blink there is no pointer to move
