--- a/libs/modules/content-index.less
+++ b/libs/modules/content-index.less
@@ -3,6 +3,7 @@
  */
 
 .beta-index-page {
+    margin-bottom: 1em*2;
     margin-bottom: @box-spacing*2;
     h2 {
         margin-top: 0;
@@ -11,10 +12,12 @@
 
 .beta-index-page__box {
     border-bottom: 1px solid @gray-7;
+    margin-bottom: 1em;
     margin-bottom: @box-spacing;
     float: left;
 
     &:last-child {
+        margin-bottom: 1em*2;
         margin-bottom: @box-spacing*2;
     }
 
@@ -32,9 +35,11 @@
 }
 
 .content__header {
+    margin-top: -1em;
     margin-top: -@box-spacing;
     background-color: @gray-7;
     h1 {
+        margin: 1em 0;
         margin: @box-spacing 0;
     }
 
@@ -45,11 +50,13 @@
 
 // Arrrrggggggg
 .section-notice + * .content__header {
+    margin-top: -1em;
     margin-top: -@box-spacing;
 }
 
 .content__header__content {
     .limit-width();
+    padding: 1em;
     padding: @box-spacing;
 
     h2 {
