--- a/libs/mixins/spacing.less
+++ b/libs/mixins/spacing.less
@@ -1,8 +1,12 @@
-.spacing(@type, @top, @right, @bottom:@top, @left:@right) {
+.spacing(@type, @top, @right:@top, @bottom:@top, @left:@right) {
 	@{type}: unit(@top, em) unit(@right, em) unit(@bottom, em) unit(@left, em);
 	@{type}: unit(@top, rem) unit(@right, rem) unit(@bottom, rem) unit(@left, rem);
     & when (@bottom = @top) and (@left = @right) {
 		@{type}: unit(@top, em) unit(@right, em);
 		@{type}: unit(@top, rem) unit(@right, rem);
+    }
+    & when (@right = @top) and (@bottom = @top) and (@left = @right) {
+		@{type}: unit(@top, em);
+		@{type}: unit(@top, rem);
     }
 }
