--- a/libs/modules/boxes.less
+++ b/libs/modules/boxes.less
@@ -11,17 +11,14 @@
         @index-box-background: @heritage-blue-lightest,
         @index-box-text: @text-color, 
     ){
-    padding: 1em;
-    padding: @box-spacing;
-    margin: 1em*.5;
-    margin: @box-spacing*.5;
+    .spacing(padding,@box-spacing);
+    .spacing(margin,@box-spacing*.5);
     background-color: @index-box-background;
     color: @index-box-text;
     border-top-width: 4px;
     display: block;
     & > h2 {
-        margin: 0 0 1em*.7;
-        margin: 0 0 @box-spacing*.7;
+        .spacing(margin,0,0,@box-spacing*.7);
         font-size: @font-size-medium;
         color: @heritage-blue;
         a {
@@ -30,8 +27,7 @@
         }
     }
     & > h3 {
-        margin: 0 0 1em*.7;
-        margin: 0 0 @box-spacing*.7;
+        .spacing(margin,0,0,@box-spacing*.7);
         font-size: @font-size-base;
         color: @text-color;
     }
@@ -76,15 +72,13 @@
     border-top-width: 4px;
 
     & > h2 {
-        margin: 0 0 1em*.7;
-        margin: 0 0 @box-spacing*.7;
+        .spacing(margin,0,0,@box-spacing*.7);
         font-size: @font-size-medium;
         color: @heritage-blue;
     }
 
     & > h3 {
-        margin: 0 0 1em*.7;
-        margin: 0 0 @box-spacing*.7;
+        .spacing(margin,0,0,@box-spacing*.7);
         font-size: @font-size-base;
         color: @text-color;
     }
@@ -113,10 +107,10 @@
 }
 
 .breadcrumb-lite {
-    padding-top: 1em*.5; 
-    padding-top: @box-spacing*.5; 
+    padding-top: unit(@box-spacing*.5,em);
+    padding-top: @box-spacing*.5;
     @media screen and (max-width: @screen-xs-max) {
-        margin-top: .75em*1.5;
+        margin-top: unit(@box-spacing-vertical*1.5,em);
         margin-top: @box-spacing-vertical*1.5;
     }
 }
