--- a/libs/modules/content-index.less
+++ b/libs/modules/content-index.less
@@ -3,7 +3,7 @@
  */
 
 .beta-index-page {
-    margin-bottom: 1em*2;
+    margin-bottom: unit(@box-spacing*2,em);
     margin-bottom: @box-spacing*2;
     h2 {
         margin-top: 0;
@@ -12,12 +12,12 @@
 
 .beta-index-page__box {
     border-bottom: 1px solid @gray-7;
-    margin-bottom: 1em;
+    margin-bottom: unit(@box-spacing,em);
     margin-bottom: @box-spacing;
     float: left;
 
     &:last-child {
-        margin-bottom: 1em*2;
+        margin-bottom: unit(@box-spacing*2,em);
         margin-bottom: @box-spacing*2;
     }
 
@@ -35,12 +35,11 @@
 }
 
 .content__header {
-    margin-top: -1em;
+    margin-top: unit(-@box-spacing,em);
     margin-top: -@box-spacing;
     background-color: @gray-7;
     h1 {
-        margin: 1em 0;
-        margin: @box-spacing 0;
+        .spacing(margin,@box-spacing,0);
     }
 
     @media (max-width: @screen-xs-max) {
@@ -50,13 +49,13 @@
 
 // Arrrrggggggg
 .section-notice + * .content__header {
-    margin-top: -1em;
+    margin-top: unit(-@box-spacing,em);
     margin-top: -@box-spacing;
 }
 
 .content__header__content {
     .limit-width();
-    padding: 1em;
+    padding: unit(@box-spacing,em);
     padding: @box-spacing;
 
     h2 {
