--- a/libs/modules/calls-for-evidence.less
+++ b/libs/modules/calls-for-evidence.less
@@ -11,7 +11,7 @@
 
         & > i {
             // Add a bit more spacing onthe icon
-            margin-right: 1em*.3;
+            margin-right: unit(@box-spacing-horizontal*.3,em);
             margin-right: @box-spacing-horizontal*.3;
         }
     }
